--- a/lab_song_classification.ipynb
+++ b/lab_song_classification.ipynb
@@ -1039,15 +1039,13 @@
         "outputId": "2bd155c3-cd22-47b2-d248-e024a3e20940"
       },
       "source": [
-        "# =========================\n",
-        "# STEP 1 — Baseline on top features with a clean Pipeline (CV)\n",
-        "# =========================\n",
+        "# Baseline on top features with a clean Pipeline (CV)\n",
         "\n",
-        "# pick the top numeric features from EDA + the categoricals\n",
+        "# top numeric features from EDA + the categoricals\n",
         "top_num = ['speechiness','acousticness','energy','loudness','danceability']  # from your EDA\n",
         "top_cat = ['key','mode','time_signature']  # keep as categorical\n",
         "\n",
-        "# build X/y using only these features (simple and explicit)\n",
+        "# building X/y using only these features\n",
         "X_top = train[top_num + top_cat].copy()\n",
         "y_top = train['label'].astype(int).values\n",
         "\n",
@@ -1066,13 +1064,13 @@
         "    ('clf', LogisticRegression(max_iter=1000, n_jobs=-1, solver='saga'))\n",
         "])\n",
         "\n",
-        "# cross-validated metrics (same CV setup you used)\n",
+        "# cross-validated metrics (same CV setup)\n",
         "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
         "scoring = {'acc':'accuracy','f1':'f1','auc':'roc_auc'}\n",
         "\n",
-        "# run CV and print results to compare later\n",
+        "# CV and results\n",
         "res_lr_top = cross_validate(logreg_top, X_top, y_top, cv=cv, scoring=scoring, n_jobs=-1)\n",
-        "print(\"[STEP 1] Logistic Regression (top features) CV results:\")\n",
+        "print(\"Logistic Regression (top features) CV results:\")\n",
         "print(f\"  Accuracy: {res_lr_top['test_acc'].mean():.3f} ± {res_lr_top['test_acc'].std():.3f}\")\n",
         "print(f\"  F1-score: {res_lr_top['test_f1'].mean():.3f}\")\n",
         "print(f\"  ROC AUC : {res_lr_top['test_auc'].mean():.3f}\")"
@@ -1094,11 +1092,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# =========================\n",
-        "# STEP 2 — Compare models and feature sets\n",
-        "# =========================\n",
+        "# Comparing models and feature sets\n",
         "\n",
-        "# build \"all features\" dataset to compare vs top features\n",
+        "# building \"all features\" dataset to compare vs top features\n",
         "X_all = train[num_feats + cat_feats].copy()\n",
         "y_all = train['label'].astype(int).values\n",
         "\n",
@@ -1116,39 +1112,39 @@
         "    remainder='drop'\n",
         ")\n",
         "\n",
-        "# 2.1 Logistic Regression on ALL features (CV)\n",
+        "# Logistic Regression on ALL features (CV)\n",
         "logreg_all = Pipeline([\n",
         "    ('prep', pre_all_scaled),\n",
         "    ('clf', LogisticRegression(max_iter=1000, n_jobs=-1, solver='saga'))\n",
         "])\n",
         "res_lr_all = cross_validate(logreg_all, X_all, y_all, cv=cv,\n",
         "                            scoring=scoring, n_jobs=-1)\n",
-        "print(\"[STEP 2] Logistic Regression (ALL features) CV:\")\n",
+        "print(\"Logistic Regression (ALL features) CV:\")\n",
         "print(f\"  Accuracy: {res_lr_all['test_acc'].mean():.3f} ± {res_lr_all['test_acc'].std():.3f}\")\n",
         "print(f\"  F1-score: {res_lr_all['test_f1'].mean():.3f}\")\n",
         "print(f\"  ROC AUC : {res_lr_all['test_auc'].mean():.3f}\")\n",
         "\n",
-        "# 2.2 Random Forest (baseline) on TOP features\n",
+        "# Random Forest (baseline) on TOP features\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "rf_top = Pipeline([\n",
-        "    ('prep', pre_top),  # from Step 1 (scaler+onehot for top features)\n",
+        "    ('prep', pre_top),  # scaler + onehot for top features\n",
         "    ('clf', RandomForestClassifier(n_estimators=300, random_state=42, n_jobs=-1))\n",
         "])\n",
         "res_rf_top = cross_validate(rf_top, X_top, y_top, cv=cv,\n",
         "                            scoring=scoring, n_jobs=-1)\n",
-        "print(\"\\n[STEP 2] Random Forest (TOP features) CV:\")\n",
+        "print(\"\\nRandom Forest (TOP features) CV:\")\n",
         "print(f\"  Accuracy: {res_rf_top['test_acc'].mean():.3f} ± {res_rf_top['test_acc'].std():.3f}\")\n",
         "print(f\"  F1-score: {res_rf_top['test_f1'].mean():.3f}\")\n",
         "print(f\"  ROC AUC : {res_rf_top['test_auc'].mean():.3f}\")\n",
         "\n",
-        "# 2.3 Random Forest (baseline) on ALL features\n",
+        "# Random Forest (baseline) on ALL features\n",
         "rf_all = Pipeline([\n",
         "    ('prep', pre_all_rf),\n",
         "    ('clf', RandomForestClassifier(n_estimators=300, random_state=42, n_jobs=-1))\n",
         "])\n",
         "res_rf_all = cross_validate(rf_all, X_all, y_all, cv=cv,\n",
         "                            scoring=scoring, n_jobs=-1)\n",
-        "print(\"\\n[STEP 2] Random Forest (ALL features) CV:\")\n",
+        "print(\"\\nRandom Forest (ALL features) CV:\")\n",
         "print(f\"  Accuracy: {res_rf_all['test_acc'].mean():.3f} ± {res_rf_all['test_acc'].std():.3f}\")\n",
         "print(f\"  F1-score: {res_rf_all['test_f1'].mean():.3f}\")\n",
         "print(f\"  ROC AUC : {res_rf_all['test_auc'].mean():.3f}\")\n",
@@ -1158,7 +1154,7 @@
         "               res_lr_all['test_auc'].mean(),\n",
         "               res_rf_top['test_auc'].mean(),\n",
         "               res_rf_all['test_auc'].mean())\n",
-        "print(f\"\\n[STEP 2] Best ROC AUC so far: {best_auc:.3f}\")"
+        "print(f\"\\nBest ROC AUC so far: {best_auc:.3f}\")"
       ],
       "metadata": {
         "colab": {
@@ -1196,24 +1192,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# =========================\n",
-        "# FINAL STEP — Train best model and create submission string\n",
-        "# =========================\n",
+        "# Creating submission string\n",
         "\n",
-        "# Choose best model (here Random Forest with ALL features worked best)\n",
+        "# Choosing best model\n",
         "final_model = rf_all.fit(X_all, y_all)\n",
         "\n",
         "# Predict on the test set (200 songs)\n",
         "X_test_all = test[num_feats + cat_feats].copy()\n",
         "pred_test = final_model.predict(X_test_all).astype(int)\n",
         "\n",
-        "# Build submission string\n",
+        "# Building submission string\n",
         "submit_str = ''.join(map(str, pred_test))\n",
         "\n",
-        "# Print the string (full, no truncation)\n",
-        "print(\"\\nSubmission string to paste on leaderboard:\")\n",
         "print(submit_str)\n",
-        "print(f\"Length: {len(submit_str)} (should be 200)\")"
+        "print(f\"Length: {len(submit_str)}\")"
       ],
       "metadata": {
         "colab": {
